Implementacion de modulo de invitar a jugadores
